[package]
name = "find-my-seats"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
askama_axum = "0.4.0"
axum = "0.7.5"
cached = { version = "0.49.3", features = ["async"] }
reqwest = { version = "0.12.4", features = ["json"] }
serde = "1.0.198"
shuttle-axum = "0.43.0"
shuttle-runtime = "0.43.0"
thiserror = "1.0.59"
tokio = "1.28.2"
wasm-streams = "0.4.0"
